--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div id="sudoku-container">
-
-    </div>
+    <div id="sudoku-container"></div>
+    <input id="speed-selector" type="range" min="1" max="1000" step="1" value="1">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
     <script src="js/plugins.js"></script>
-    <script src="js/lodash.js"></script>
+    <script src="js/vendor/lodash.js"></script>
     <script src="js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
