--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 
     <!-- Add your site or application content here -->
     <div id="sudoku-container"></div>
-    <input id="speed-selector" type="range" min="1" max="1000" step="1" value="1">
-
+    <div id="speed-selector-container">
+      <input id="speed-selector" type="range" min="10" max="10000" step="10" value="10">
+      <p>You are currently exploring <span id="speed">10</span> nodes per second.</p>
+    </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
     <script src="js/plugins.js"></script>
