--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <div id="header">
+      <h1>Solving Sudoku with AI</h1>
+    </div>
+
     <div id="sudoku-container"></div>
+
     <div id="speed-selector-container">
       <input id="speed-selector" type="range" min="10" max="10000" step="10" value="10">
       <p>You are currently exploring <span id="speed">10</span> nodes per second.</p>
