add speed button

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 
     <div id="sudoku-container"></div>
 
-    <div id="speed-selector-container">
+    <div id="actions-container">
       <input id="speed-selector" type="range" min="10" max="10000" step="10" value="10">
       <p>You are currently exploring <span id="speed">10</span> nodes per second.</p>
+      <button id="start-button" type="button">Start!</button>
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
