starts on start button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <![endif]-->
 
     <div id="header">
-      <h1>Solving Sudoku with AI</h1>
+      <h1>Solving Sudoku with A.I.</h1>
     </div>
 
     <div id="sudoku-container"></div>
