--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         <label><input type="radio" name="board" value="board2"> Board2</label>
         <label><input type="radio" name="board" value="board3"> Board3</label>
       </form>
-      <button id="start-button" type="button">Start!</button>
+      <div id="buttons-container">
+        <button id="start-button" type="button">Start!</button>
+        <button id="reset-button" type="button">Reset</button>
+      </div>
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
