boards in increasing difficulty

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
       <input id="speed-selector" type="range" min="10" max="10000" step="10" value="10">
       <p>Exploring <span id="speed">10</span> nodes per second.</p>
       <form id="board-selector">
-        <label><input type="radio" name="board" value="board1" checked="checked"> Board1</label>
-        <label><input type="radio" name="board" value="board2"> Board2</label>
-        <label><input type="radio" name="board" value="board3"> Board3</label>
+        <label><input type="radio" name="board" value="board1" checked="checked"> board 1</label>
+        <label><input type="radio" name="board" value="board2"> board 2</label>
+        <label><input type="radio" name="board" value="board3"> board 3</label>
+        <label><input type="radio" name="board" value="board4"> board 4</label>
       </form>
       <div id="buttons-container">
         <button id="start-button" type="button">Start!</button>
