disclaimer for lulz

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div id="actions-container">
       <input id="speed-selector" type="range" min="10" max="10000" step="10" value="10">
-      <p>Exploring <span id="speed">10</span> states per second.</p>
+      <p>Exploring <span id="speed">10</span> states per second (May not be as fast as advertised, especially on mobile devices).</p>
       <form id="board-selector">
         <label><input type="radio" name="board" value="board1" checked="checked"> Board 1</label>
         <label><input type="radio" name="board" value="board2"> Board 2</label>
