--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <![endif]-->
 
     <div id="header">
-      <h1>Solving Sudoku with DFS</h1>
+      <h1>Solving Sudoku as a CSP</h1>
     </div>
 
     <div id="sudoku-container"></div>
